--- a/404.html
+++ b/404.html
@@ -84,7 +84,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="type-system.html"><strong aria-hidden="true">2.</strong> Type System</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="type-system.html"><strong aria-hidden="true">2.</strong> Type System</a></li><li class="chapter-item expanded "><a href="examples.html"><strong aria-hidden="true">3.</strong> Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="examples/pet-store.html"><strong aria-hidden="true">3.1.</strong> Pet Store</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="examples/pet-store/openapi.html"><strong aria-hidden="true">3.1.1.</strong> JSON definition</a></li><li class="chapter-item expanded "><a href="examples/pet-store/wit.html"><strong aria-hidden="true">3.1.2.</strong> WIT definition</a></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
