--- a/examples.html
+++ b/examples.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Type System - openapi-wit</title>
+        <title>Examples - openapi-wit</title>
 
 
         <!-- Custom HTML head -->
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="type-system.html" class="active"><strong aria-hidden="true">2.</strong> Type System</a></li><li class="chapter-item expanded "><a href="examples.html"><strong aria-hidden="true">3.</strong> Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="examples/pet-store.html"><strong aria-hidden="true">3.1.</strong> Pet Store</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="examples/pet-store/openapi.html"><strong aria-hidden="true">3.1.1.</strong> JSON definition</a></li><li class="chapter-item expanded "><a href="examples/pet-store/wit.html"><strong aria-hidden="true">3.1.2.</strong> WIT definition</a></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="type-system.html"><strong aria-hidden="true">2.</strong> Type System</a></li><li class="chapter-item expanded "><a href="examples.html" class="active"><strong aria-hidden="true">3.</strong> Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="examples/pet-store.html"><strong aria-hidden="true">3.1.</strong> Pet Store</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="examples/pet-store/openapi.html"><strong aria-hidden="true">3.1.1.</strong> JSON definition</a></li><li class="chapter-item expanded "><a href="examples/pet-store/wit.html"><strong aria-hidden="true">3.1.2.</strong> WIT definition</a></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -144,68 +144,19 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="type-system"><a class="header" href="#type-system">Type System</a></h1>
-<p>Definitions are for <a href="https://spec.openapis.org/oas/latest.html">OpenAPI v3.1.0</a>:</p>
-<div class="table-wrapper"><table><thead><tr><th style="text-align: left">JSON Schema Type</th><th style="text-align: left">OpenAPI Format Modifier</th><th style="text-align: left">WIT Type</th></tr></thead><tbody>
-<tr><td style="text-align: left"><code>null</code></td><td style="text-align: left">-</td><td style="text-align: left"><code>option&lt;T&gt;</code></td></tr>
-<tr><td style="text-align: left"><code>boolean</code></td><td style="text-align: left">-</td><td style="text-align: left"><code>bool</code></td></tr>
-<tr><td style="text-align: left"><code>object</code></td><td style="text-align: left">-</td><td style="text-align: left"><code>record</code></td></tr>
-<tr><td style="text-align: left"><code>array</code></td><td style="text-align: left">-</td><td style="text-align: left"><code>list&lt;T&gt;</code></td></tr>
-<tr><td style="text-align: left"><code>number</code></td><td style="text-align: left">-</td><td style="text-align: left"><code>float64</code></td></tr>
-<tr><td style="text-align: left"><code>number</code></td><td style="text-align: left"><code>float</code></td><td style="text-align: left"><code>float32</code></td></tr>
-<tr><td style="text-align: left"><code>number</code></td><td style="text-align: left"><code>double</code></td><td style="text-align: left"><code>float64</code></td></tr>
-<tr><td style="text-align: left"><code>string</code></td><td style="text-align: left">-</td><td style="text-align: left"><code>string</code></td></tr>
-<tr><td style="text-align: left"><code>string</code></td><td style="text-align: left"><code>password</code></td><td style="text-align: left"><code>string</code></td></tr>
-<tr><td style="text-align: left"><code>integer</code></td><td style="text-align: left"><code>int32</code></td><td style="text-align: left"><code>s32</code></td></tr>
-<tr><td style="text-align: left"><code>integer</code></td><td style="text-align: left"><code>int64</code></td><td style="text-align: left"><code>s64</code></td></tr>
-</tbody></table>
-</div>
-<h2 id="discussion"><a class="header" href="#discussion">Discussion</a></h2>
-<h3 id="number"><a class="header" href="#number"><code>number</code></a></h3>
-<p>The base <code>number</code> type without any qualifier here is mapped to <code>float64</code>. The
-JSON Schema specification mentions it should actually be:</p>
-<blockquote>
-<p>An arbitrary-precision, base-10 decimal number value, from the JSON &quot;number&quot;
-value.</p>
-</blockquote>
-<p>But we want to be able to use <code>serde-json</code> for this, which defines <code>number</code> <a href="https://docs.rs/serde_json/latest/serde_json/value/struct.Number.html#method.from_f64">as
-an
-<code>f64</code></a>.
-WIT does not (yet?) support arbitrary-precision floating point numbers, so in
-the absence of any constraining information we should just pick the biggest
-number we can support.</p>
-<h3 id="null"><a class="header" href="#null"><code>null</code></a></h3>
-<p>WIT also has no notion of <code>null</code> in the type system; instead it uses the
-<code>option</code> type to indicate a value may or may not be present. A field which can
-only ever be <code>null</code> should be rejected in any encoding - in Rust terms we'd want
-to translate that to a type of <code>Option&lt;!&gt;</code> (only <code>None</code> can be constructed) - or
-<code>Option&lt;Unreachable&gt;</code> (an empty enum akin to <code>!</code>). But in WIT we can't do either of these things, so a field that's hard-coded to only ever be <code>none</code> should be rejected to prevent any ambiguities in the encoding.</p>
-<h3 id="password"><a class="header" href="#password"><code>password</code></a></h3>
-<p>Regarding password strings: for the sake of simplicity we should treat this as a
-regular string for the time being. However in the future we may want to define a
-generic type <code>sensitive&lt;T&gt;</code> which can hold strings whose contents are sensitive
-and should never be printed or displayed. This will require a non-trivial type
-system addition though, as we'll also want to consider secret encoding /
-decoding schemes, if only to ensure we're making the right tradeoffs. So to not
-have that conversation right now, we're just treating password strings as
-regular strings.</p>
-<h2 id="see-also"><a class="header" href="#see-also">See Also</a></h2>
-<ul>
-<li><a href="https://spec.openapis.org/oas/latest.html#openapi-document">OpenAPI <code>v3.1.0</code> specifcation</a></li>
-<li><a href="https://github.com/MendyBerger/webidl-wit/tree/main"><code>webidl-wit</code></a></li>
-<li><a href="https://docs.rs/serde_json/1.0.61/serde_json/value/struct.Number.html"><code>serde_json::value::Number</code></a></li>
-<li><a href="https://datatracker.ietf.org/doc/html/draft-bhutton-json-schema-01#section-4.2.1">json schema draft RFC</a></li>
-</ul>
+                        <h1 id="examples"><a class="header" href="#examples">Examples</a></h1>
+<p>These are example mappings from <code>WIT</code> &lt;-&gt; <code>OpenAPI</code>, showing how we intend
+codegen to work between the two.</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="introduction.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="type-system.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="examples.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="examples/pet-store.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -215,11 +166,11 @@ regular strings.</p>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="introduction.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="type-system.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="examples.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="examples/pet-store.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
