deploy: 1f8a4c6e64ec9705ee1e395fe6f96b979274b0d7

--- a/examples/pet-store/wit.html
+++ b/examples/pet-store/wit.html
@@ -146,10 +146,7 @@
                     <main>
                         <h1 id="wit-definition"><a class="header" href="#wit-definition">WIT definition</a></h1>
 <h2 id="routes"><a class="header" href="#routes">Routes</a></h2>
-<pre><code class="language-wit">func servers() -&gt; list{
-
-}
-interface pets {
+<pre><code class="language-wit">interface pets {
     record list-pets-input {
         limit: option&lt;s32&gt;
     }
