--- a/print.html
+++ b/print.html
@@ -383,10 +383,7 @@ codegen to work between the two.</p>
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="wit-definition"><a class="header" href="#wit-definition">WIT definition</a></h1>
 <h2 id="routes"><a class="header" href="#routes">Routes</a></h2>
-<pre><code class="language-wit">func servers() -&gt; list{
-
-}
-interface pets {
+<pre><code class="language-wit">interface pets {
     record list-pets-input {
         limit: option&lt;s32&gt;
     }
