--- a/print.html
+++ b/print.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>openapi-wit</title>
+        <title>wasm-http-tools</title>
         <meta name="robots" content="noindex" />
 
 
@@ -113,7 +113,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">openapi-wit</h1>
+                    <h1 class="menu-title">wasm-http-tools</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
