--- a/type-system.html
+++ b/type-system.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Type System - openapi-wit</title>
+        <title>Type System - wasm-http-tools</title>
 
 
         <!-- Custom HTML head -->
@@ -112,7 +112,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">openapi-wit</h1>
+                    <h1 class="menu-title">wasm-http-tools</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
